# videoStabilizator

./: .gitignore  CMakeLists.txt  videoStabilizator.sln
videoStabilizator/: dump.cpp  main.cpp  videoStabilizator.vcxproj
